--- a/integration/test_basic.html
+++ b/integration/test_basic.html
@@ -299,8 +299,10 @@ def volume_basic_test(client, volume_name, backing_image=&#34;&#34;):  # NOQA
                                       numberOfReplicas=2,
                                       frontend=&#34;invalid_frontend&#34;)
 
-    volume = create_and_check_volume(client, volume_name, num_replicas, SIZE,
-                                     backing_image)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=num_replicas,
+                                     size=SIZE,
+                                     backing_image=backing_image)
     assert volume.restoreRequired is False
 
     def validate_volume_basic(expected, actual):
@@ -377,8 +379,11 @@ def test_volume_iscsi_basic(client, volume_name):  # NOQA
 
 def volume_iscsi_basic_test(client, volume_name, backing_image=&#34;&#34;):  # NOQA
     host_id = get_self_host_id()
-    volume = create_and_check_volume(client, volume_name, 3, SIZE,
-                                     backing_image, VOLUME_FRONTEND_ISCSI)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
+                                     size=SIZE,
+                                     backing_image=backing_image,
+                                     frontend=VOLUME_FRONTEND_ISCSI)
     volume.attach(hostId=host_id)
     volume = common.wait_for_volume_healthy(client, volume_name)
 
@@ -587,8 +592,10 @@ def test_backup_status_for_unavailable_replicas(set_random_backupstore, client, 
 
 def backup_status_for_unavailable_replicas_test(client, volume_name,  # NOQA
                                                 size, backing_image=&#34;&#34;):  # NOQA
-    volume = create_and_check_volume(client, volume_name, 2, str(size),
-                                     backing_image)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=str(size),
+                                     backing_image=backing_image)
 
     lht_hostId = get_self_host_id()
     volume = volume.attach(hostId=lht_hostId)
@@ -774,7 +781,9 @@ def test_dr_volume_activated_with_failed_replica(set_random_backupstore, client,
     backupstore_cleanup(client)
 
     host_id = get_self_host_id()
-    vol = create_and_check_volume(client, volume_name, 2, SIZE)
+    vol = create_and_check_volume(client, volume_name,
+                                  num_of_replicas=2,
+                                  size=SIZE)
     vol.attach(hostId=host_id)
     vol = common.wait_for_volume_healthy(client, volume_name)
 
@@ -849,7 +858,9 @@ def test_dr_volume_with_backup_block_deletion(set_random_backupstore, client, co
 
     host_id = get_self_host_id()
 
-    vol = create_and_check_volume(client, volume_name, 2, SIZE)
+    vol = create_and_check_volume(client, volume_name,
+                                  num_of_replicas=2,
+                                  size=SIZE)
     vol.attach(hostId=host_id)
     vol = common.wait_for_volume_healthy(client, volume_name)
 
@@ -946,7 +957,9 @@ def test_dr_volume_with_backup_block_deletion_abort_during_backup_in_progress(se
 
     host_id = get_self_host_id()
 
-    vol = create_and_check_volume(client, volume_name, 2, SIZE)
+    vol = create_and_check_volume(client, volume_name,
+                                  num_of_replicas=2,
+                                  size=SIZE)
     vol.attach(hostId=host_id)
     vol = common.wait_for_volume_healthy(client, volume_name)
 
@@ -1025,7 +1038,9 @@ def test_dr_volume_with_all_backup_blocks_deleted(set_random_backupstore, client
 
     host_id = get_self_host_id()
 
-    vol = create_and_check_volume(client, volume_name, 2, SIZE)
+    vol = create_and_check_volume(client, volume_name,
+                                  num_of_replicas=2,
+                                  size=SIZE)
     vol.attach(hostId=host_id)
     vol = common.wait_for_volume_healthy(client, volume_name)
 
@@ -1350,8 +1365,10 @@ def test_backup(set_random_backupstore, client, volume_name):  # NOQA
 
 
 def backup_test(client, volume_name, size, backing_image=&#34;&#34;, compression_method=DEFAULT_BACKUP_COMPRESSION_METHOD):  # NOQA
-    volume = create_and_check_volume(client, volume_name, 2, size,
-                                     backing_image)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=size,
+                                     backing_image=backing_image)
 
     lht_hostId = get_self_host_id()
     volume = volume.attach(hostId=lht_hostId)
@@ -1410,8 +1427,10 @@ def test_backup_labels(set_random_backupstore, client, random_labels, volume_nam
 def backup_labels_test(client, random_labels, volume_name, size=SIZE, backing_image=&#34;&#34;):  # NOQA
     host_id = get_self_host_id()
 
-    volume = create_and_check_volume(client, volume_name, 2, size,
-                                     backing_image)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=size,
+                                     backing_image=backing_image)
 
     volume.attach(hostId=host_id)
     volume = common.wait_for_volume_healthy(client, volume_name)
@@ -1461,7 +1480,9 @@ def test_restore_inc(set_random_backupstore, client, core_api, volume_name, pod)
 
 
 def restore_inc_test(client, core_api, volume_name, pod):  # NOQA
-    std_volume = create_and_check_volume(client, volume_name, 2, SIZE)
+    std_volume = create_and_check_volume(client, volume_name,
+                                         num_of_replicas=2,
+                                         size=SIZE)
     lht_host_id = get_self_host_id()
     std_volume.attach(hostId=lht_host_id)
     std_volume = common.wait_for_volume_healthy(client, volume_name)
@@ -2105,7 +2126,8 @@ def test_volume_update_replica_count(client, volume_name):  # NOQA
     host_id = get_self_host_id()
 
     replica_count = 2
-    volume = create_and_check_volume(client, volume_name, replica_count)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=replica_count)
 
     volume.attach(hostId=host_id)
     volume = common.wait_for_volume_healthy(client, volume_name)
@@ -2210,11 +2232,8 @@ def test_storage_class_from_backup(set_random_backupstore, volume_name, pvc_name
 
     pv_name = pvc_name
 
-    volume = create_and_check_volume(
-        client,
-        volume_name,
-        size=VOLUME_SIZE
-    )
+    volume = create_and_check_volume(client, volume_name,
+                                     size=VOLUME_SIZE)
 
     wait_for_volume_detached(client, volume_name)
 
@@ -2432,7 +2451,9 @@ def test_expansion_with_size_round_up(client, core_api, volume_name):  # NOQA
     5. Check if size round up &#39;2147483648&#39; and the written data.
     &#34;&#34;&#34;
 
-    volume = create_and_check_volume(client, volume_name, 2, str(1 * Gi))
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=str(1 * Gi))
 
     self_hostId = get_self_host_id()
     volume.attach(hostId=self_hostId, disableFrontend=False)
@@ -2494,7 +2515,9 @@ def test_restore_inc_with_offline_expansion(set_random_backupstore, client, core
     &#34;&#34;&#34;
     lht_host_id = get_self_host_id()
 
-    std_volume = create_and_check_volume(client, volume_name, 2, SIZE)
+    std_volume = create_and_check_volume(client, volume_name,
+                                         num_of_replicas=2,
+                                         size=SIZE)
     std_volume.attach(hostId=lht_host_id)
     std_volume = common.wait_for_volume_healthy(client, volume_name)
 
@@ -4222,7 +4245,9 @@ def test_expand_pvc_with_size_round_up(client, core_api, volume_name):  # NOQA
     setting = client.update(setting, value=static_sc_name)
     assert setting.value == static_sc_name
 
-    volume = create_and_check_volume(client, volume_name, 2, str(1 * Gi))
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=str(1 * Gi))
     create_pv_for_volume(client, core_api, volume, volume_name)
     create_pvc_for_volume(client, core_api, volume, volume_name)
 
@@ -5858,8 +5883,10 @@ def test_volume_backup_and_restore_with_none_compression_method(client, set_rand
 <pre><code class="python">def backup_labels_test(client, random_labels, volume_name, size=SIZE, backing_image=&#34;&#34;):  # NOQA
     host_id = get_self_host_id()
 
-    volume = create_and_check_volume(client, volume_name, 2, size,
-                                     backing_image)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=size,
+                                     backing_image=backing_image)
 
     volume.attach(hostId=host_id)
     volume = common.wait_for_volume_healthy(client, volume_name)
@@ -5887,8 +5914,10 @@ def test_volume_backup_and_restore_with_none_compression_method(client, set_rand
 </summary>
 <pre><code class="python">def backup_status_for_unavailable_replicas_test(client, volume_name,  # NOQA
                                                 size, backing_image=&#34;&#34;):  # NOQA
-    volume = create_and_check_volume(client, volume_name, 2, str(size),
-                                     backing_image)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=str(size),
+                                     backing_image=backing_image)
 
     lht_hostId = get_self_host_id()
     volume = volume.attach(hostId=lht_hostId)
@@ -5962,8 +5991,10 @@ def test_volume_backup_and_restore_with_none_compression_method(client, set_rand
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">def backup_test(client, volume_name, size, backing_image=&#34;&#34;, compression_method=DEFAULT_BACKUP_COMPRESSION_METHOD):  # NOQA
-    volume = create_and_check_volume(client, volume_name, 2, size,
-                                     backing_image)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=size,
+                                     backing_image=backing_image)
 
     lht_hostId = get_self_host_id()
     volume = volume.attach(hostId=lht_hostId)
@@ -6181,7 +6212,9 @@ the default disk.</li>
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">def restore_inc_test(client, core_api, volume_name, pod):  # NOQA
-    std_volume = create_and_check_volume(client, volume_name, 2, SIZE)
+    std_volume = create_and_check_volume(client, volume_name,
+                                         num_of_replicas=2,
+                                         size=SIZE)
     lht_host_id = get_self_host_id()
     std_volume.attach(hostId=lht_host_id)
     std_volume = common.wait_for_volume_healthy(client, volume_name)
@@ -9123,7 +9156,9 @@ as long as there is a ready replica.</p>
     backupstore_cleanup(client)
 
     host_id = get_self_host_id()
-    vol = create_and_check_volume(client, volume_name, 2, SIZE)
+    vol = create_and_check_volume(client, volume_name,
+                                  num_of_replicas=2,
+                                  size=SIZE)
     vol.attach(hostId=host_id)
     vol = common.wait_for_volume_healthy(client, volume_name)
 
@@ -9211,7 +9246,9 @@ as long as there is a ready replica.</p>
 
     host_id = get_self_host_id()
 
-    vol = create_and_check_volume(client, volume_name, 2, SIZE)
+    vol = create_and_check_volume(client, volume_name,
+                                  num_of_replicas=2,
+                                  size=SIZE)
     vol.attach(hostId=host_id)
     vol = common.wait_for_volume_healthy(client, volume_name)
 
@@ -9316,7 +9353,9 @@ data2["content"] + data0["content"][BACKUP_BLOCK_SIZE:].</li>
 
     host_id = get_self_host_id()
 
-    vol = create_and_check_volume(client, volume_name, 2, SIZE)
+    vol = create_and_check_volume(client, volume_name,
+                                  num_of_replicas=2,
+                                  size=SIZE)
     vol.attach(hostId=host_id)
     vol = common.wait_for_volume_healthy(client, volume_name)
 
@@ -9455,7 +9494,9 @@ data2["content"] + data0["content"][BACKUP_BLOCK_SIZE:].</li>
 
     host_id = get_self_host_id()
 
-    vol = create_and_check_volume(client, volume_name, 2, SIZE)
+    vol = create_and_check_volume(client, volume_name,
+                                  num_of_replicas=2,
+                                  size=SIZE)
     vol.attach(hostId=host_id)
     vol = common.wait_for_volume_healthy(client, volume_name)
 
@@ -9617,7 +9658,9 @@ check if size round up '2000683008/1908Mi'</li>
     setting = client.update(setting, value=static_sc_name)
     assert setting.value == static_sc_name
 
-    volume = create_and_check_volume(client, volume_name, 2, str(1 * Gi))
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=str(1 * Gi))
     create_pv_for_volume(client, core_api, volume, volume_name)
     create_pvc_for_volume(client, core_api, volume, volume_name)
 
@@ -10203,7 +10246,9 @@ def test_expansion_with_scheduling_failure(
     5. Check if size round up &#39;2147483648&#39; and the written data.
     &#34;&#34;&#34;
 
-    volume = create_and_check_volume(client, volume_name, 2, str(1 * Gi))
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=str(1 * Gi))
 
     self_hostId = get_self_host_id()
     volume.attach(hostId=self_hostId, disableFrontend=False)
@@ -11273,7 +11318,9 @@ def test_restore_inc_with_offline_expansion(set_random_backupstore, client, core
     &#34;&#34;&#34;
     lht_host_id = get_self_host_id()
 
-    std_volume = create_and_check_volume(client, volume_name, 2, SIZE)
+    std_volume = create_and_check_volume(client, volume_name,
+                                         num_of_replicas=2,
+                                         size=SIZE)
     std_volume.attach(hostId=lht_host_id)
     std_volume = common.wait_for_volume_healthy(client, volume_name)
 
@@ -12128,11 +12175,8 @@ def test_storage_class_from_backup(set_random_backupstore, volume_name, pvc_name
 
     pv_name = pvc_name
 
-    volume = create_and_check_volume(
-        client,
-        volume_name,
-        size=VOLUME_SIZE
-    )
+    volume = create_and_check_volume(client, volume_name,
+                                     size=VOLUME_SIZE)
 
     wait_for_volume_detached(client, volume_name)
 
@@ -12895,7 +12939,8 @@ def test_volume_update_replica_count(client, volume_name):  # NOQA
     host_id = get_self_host_id()
 
     replica_count = 2
-    volume = create_and_check_volume(client, volume_name, replica_count)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=replica_count)
 
     volume.attach(hostId=host_id)
     volume = common.wait_for_volume_healthy(client, volume_name)
@@ -13014,8 +13059,10 @@ the format <strong><em>*rw</em></strong>*</li>
                                       numberOfReplicas=2,
                                       frontend=&#34;invalid_frontend&#34;)
 
-    volume = create_and_check_volume(client, volume_name, num_replicas, SIZE,
-                                     backing_image)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=num_replicas,
+                                     size=SIZE,
+                                     backing_image=backing_image)
     assert volume.restoreRequired is False
 
     def validate_volume_basic(expected, actual):
@@ -13088,8 +13135,11 @@ the format <strong><em>*rw</em></strong>*</li>
 </summary>
 <pre><code class="python">def volume_iscsi_basic_test(client, volume_name, backing_image=&#34;&#34;):  # NOQA
     host_id = get_self_host_id()
-    volume = create_and_check_volume(client, volume_name, 3, SIZE,
-                                     backing_image, VOLUME_FRONTEND_ISCSI)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
+                                     size=SIZE,
+                                     backing_image=backing_image,
+                                     frontend=VOLUME_FRONTEND_ISCSI)
     volume.attach(hostId=host_id)
     volume = common.wait_for_volume_healthy(client, volume_name)
 
