--- a/integration/test_ha.html
+++ b/integration/test_ha.html
@@ -141,8 +141,10 @@ def test_ha_simple_recovery(client, volume_name):  # NOQA
 
 
 def ha_simple_recovery_test(client, volume_name, size, backing_image=&#34;&#34;):  # NOQA
-    volume = create_and_check_volume(client, volume_name, 2, size,
-                                     backing_image)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=size,
+                                     backing_image=backing_image)
 
     host_id = get_self_host_id()
     volume = volume.attach(hostId=host_id)
@@ -276,7 +278,8 @@ def ha_salvage_test(client, core_api, # NOQA
     assert setting.name == SETTING_AUTO_SALVAGE
     assert setting.value == &#34;false&#34;
 
-    volume = create_and_check_volume(client, volume_name, 2,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
                                      backing_image=backing_image)
 
     host_id = get_self_host_id()
@@ -319,7 +322,8 @@ def ha_salvage_test(client, core_api, # NOQA
     assert setting.name == SETTING_AUTO_SALVAGE
     assert setting.value == &#34;false&#34;
 
-    volume = create_and_check_volume(client, volume_name, 2,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
                                      backing_image=backing_image)
     volume.attach(hostId=host_id)
     volume = wait_for_volume_healthy(client, volume_name)
@@ -367,7 +371,8 @@ def ha_salvage_test(client, core_api, # NOQA
     assert setting.name == SETTING_DISABLE_REVISION_COUNTER
     assert setting.value == &#34;true&#34;
 
-    volume = create_and_check_volume(client, volume_name, 3,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
                                      backing_image=backing_image)
 
     host_id = get_self_host_id()
@@ -411,7 +416,8 @@ def ha_salvage_test(client, core_api, # NOQA
     assert setting.name == &#34;disable-revision-counter&#34;
     assert setting.value == &#34;false&#34;
 
-    volume = create_and_check_volume(client, volume_name, 3,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
                                      backing_image=backing_image)
 
     host_id = get_self_host_id()
@@ -535,7 +541,8 @@ def test_ha_prohibit_deleting_last_replica(client, volume_name):  # NOQA
 
     FIXME: Move out of test_ha.py
     &#34;&#34;&#34;
-    volume = create_and_check_volume(client, volume_name, 1)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=1)
 
     host_id = get_self_host_id()
     volume = volume.attach(hostId=host_id)
@@ -567,7 +574,9 @@ def test_ha_recovery_with_expansion(client, volume_name, request):   # NOQA
     &#34;&#34;&#34;
     original_size = str(3 * Gi)
     expand_size = str(4 * Gi)
-    volume = create_and_check_volume(client, volume_name, 2, original_size)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=original_size)
 
     host_id = get_self_host_id()
     volume.attach(hostId=host_id)
@@ -1909,7 +1918,8 @@ def test_rebuild_after_replica_file_crash(client, volume_name): # NOQA
     6. Read the data from the volume and verify the md5sum.
     &#34;&#34;&#34;
     replica_count = 3
-    volume = create_and_check_volume(client, volume_name, replica_count)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=replica_count)
     host_id = get_self_host_id()
     volume = volume.attach(hostId=host_id)
     volume = wait_for_volume_healthy(client, volume_name)
@@ -2516,7 +2526,9 @@ def test_replica_failure_during_attaching(settings_reset, client, core_api, volu
     node = common.wait_for_disk_update(client, node.name, len(update_disks))
 
     volume_name_2 = volume_name + &#39;-2&#39;
-    volume_2 = create_and_check_volume(client, volume_name_2, 3, str(1 * Gi))
+    volume_2 = create_and_check_volume(client, volume_name_2,
+                                       num_of_replicas=3,
+                                       size=str(1 * Gi))
     volume_2.attach(hostId=host_id)
     volume_2 = wait_for_volume_healthy(client, volume_name_2)
     write_volume_random_data(volume_2)
@@ -2875,7 +2887,8 @@ def test_engine_image_not_fully_deployed_perform_replica_scheduling(client, core
     node2 = common.wait_for_node_update(client, node2.id, &#34;allowScheduling&#34;,
                                         False)
 
-    volume1 = create_and_check_volume(client, &#34;vol-1&#34;, num_of_replicas=2,
+    volume1 = create_and_check_volume(client, &#34;vol-1&#34;,
+                                      num_of_replicas=2,
                                       size=str(3 * Gi))
 
     volume1.attach(hostId=node3.id)
@@ -2922,10 +2935,12 @@ def test_engine_image_not_fully_deployed_perform_auto_upgrade_engine(client, cor
     &#34;&#34;&#34;
     prepare_engine_not_fully_deployed_environment(client, core_api)
 
-    volume1 = create_and_check_volume(client, &#34;vol-1&#34;, num_of_replicas=2,
+    volume1 = create_and_check_volume(client, &#34;vol-1&#34;,
+                                      num_of_replicas=2,
                                       size=str(3 * Gi))
 
-    volume2 = create_and_check_volume(client, &#34;vol-2&#34;, num_of_replicas=2,
+    volume2 = create_and_check_volume(client, &#34;vol-2&#34;,
+                                      num_of_replicas=2,
                                       size=str(3 * Gi))
 
     default_img = common.get_default_engine_image(client)
@@ -2999,7 +3014,8 @@ def test_engine_image_not_fully_deployed_perform_dr_restoring_expanding_volume(c
         prepare_engine_not_fully_deployed_environment(client, core_api)
 
     # step 1
-    volume1 = create_and_check_volume(client, &#34;vol-1&#34;, num_of_replicas=2,
+    volume1 = create_and_check_volume(client, &#34;vol-1&#34;,
+                                      num_of_replicas=2,
                                       size=str(1 * Gi))
 
     # node1: tainted node, node2: self host node, node3: the last one
@@ -3584,7 +3600,8 @@ def restore_with_replica_failure(client, core_api, volume_name, csi_pv, # NOQA
     assert setting.name == SETTING_AUTO_SALVAGE
     assert setting.value == &#34;false&#34;
 
-    volume = create_and_check_volume(client, volume_name, 2,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
                                      backing_image=backing_image)
 
     host_id = get_self_host_id()
@@ -3627,7 +3644,8 @@ def restore_with_replica_failure(client, core_api, volume_name, csi_pv, # NOQA
     assert setting.name == SETTING_AUTO_SALVAGE
     assert setting.value == &#34;false&#34;
 
-    volume = create_and_check_volume(client, volume_name, 2,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
                                      backing_image=backing_image)
     volume.attach(hostId=host_id)
     volume = wait_for_volume_healthy(client, volume_name)
@@ -3675,7 +3693,8 @@ def restore_with_replica_failure(client, core_api, volume_name, csi_pv, # NOQA
     assert setting.name == SETTING_DISABLE_REVISION_COUNTER
     assert setting.value == &#34;true&#34;
 
-    volume = create_and_check_volume(client, volume_name, 3,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
                                      backing_image=backing_image)
 
     host_id = get_self_host_id()
@@ -3719,7 +3738,8 @@ def restore_with_replica_failure(client, core_api, volume_name, csi_pv, # NOQA
     assert setting.name == &#34;disable-revision-counter&#34;
     assert setting.value == &#34;false&#34;
 
-    volume = create_and_check_volume(client, volume_name, 3,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
                                      backing_image=backing_image)
 
     host_id = get_self_host_id()
@@ -3760,8 +3780,10 @@ def restore_with_replica_failure(client, core_api, volume_name, csi_pv, # NOQA
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">def ha_simple_recovery_test(client, volume_name, size, backing_image=&#34;&#34;):  # NOQA
-    volume = create_and_check_volume(client, volume_name, 2, size,
-                                     backing_image)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=size,
+                                     backing_image=backing_image)
 
     host_id = get_self_host_id()
     volume = volume.attach(hostId=host_id)
@@ -5126,10 +5148,12 @@ vol-1 and vol-2.</li>
     &#34;&#34;&#34;
     prepare_engine_not_fully_deployed_environment(client, core_api)
 
-    volume1 = create_and_check_volume(client, &#34;vol-1&#34;, num_of_replicas=2,
+    volume1 = create_and_check_volume(client, &#34;vol-1&#34;,
+                                      num_of_replicas=2,
                                       size=str(3 * Gi))
 
-    volume2 = create_and_check_volume(client, &#34;vol-2&#34;, num_of_replicas=2,
+    volume2 = create_and_check_volume(client, &#34;vol-2&#34;,
+                                      num_of_replicas=2,
                                       size=str(3 * Gi))
 
     default_img = common.get_default_engine_image(client)
@@ -5239,7 +5263,8 @@ for vol-1 and doesn't reuse the failed replica on node-x</li>
         prepare_engine_not_fully_deployed_environment(client, core_api)
 
     # step 1
-    volume1 = create_and_check_volume(client, &#34;vol-1&#34;, num_of_replicas=2,
+    volume1 = create_and_check_volume(client, &#34;vol-1&#34;,
+                                      num_of_replicas=2,
                                       size=str(1 * Gi))
 
     # node1: tainted node, node2: self host node, node3: the last one
@@ -5497,7 +5522,8 @@ tainted node and not fully deployed engine.</p>
     node2 = common.wait_for_node_update(client, node2.id, &#34;allowScheduling&#34;,
                                         False)
 
-    volume1 = create_and_check_volume(client, &#34;vol-1&#34;, num_of_replicas=2,
+    volume1 = create_and_check_volume(client, &#34;vol-1&#34;,
+                                      num_of_replicas=2,
                                       size=str(3 * Gi))
 
     volume1.attach(hostId=node3.id)
@@ -5792,7 +5818,8 @@ restored backup.</p></div>
 
     FIXME: Move out of test_ha.py
     &#34;&#34;&#34;
-    volume = create_and_check_volume(client, volume_name, 1)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=1)
 
     host_id = get_self_host_id()
     volume = volume.attach(hostId=host_id)
@@ -5844,7 +5871,9 @@ restored backup.</p></div>
     &#34;&#34;&#34;
     original_size = str(3 * Gi)
     expand_size = str(4 * Gi)
-    volume = create_and_check_volume(client, volume_name, 2, original_size)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=2,
+                                     size=original_size)
 
     host_id = get_self_host_id()
     volume.attach(hostId=host_id)
@@ -6352,7 +6381,8 @@ the activated volume.
     6. Read the data from the volume and verify the md5sum.
     &#34;&#34;&#34;
     replica_count = 3
-    volume = create_and_check_volume(client, volume_name, replica_count)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=replica_count)
     host_id = get_self_host_id()
     volume = volume.attach(hostId=host_id)
     volume = wait_for_volume_healthy(client, volume_name)
@@ -6932,7 +6962,9 @@ and make sure the extra disk is the only available disk on the node.
     node = common.wait_for_disk_update(client, node.name, len(update_disks))
 
     volume_name_2 = volume_name + &#39;-2&#39;
-    volume_2 = create_and_check_volume(client, volume_name_2, 3, str(1 * Gi))
+    volume_2 = create_and_check_volume(client, volume_name_2,
+                                       num_of_replicas=3,
+                                       size=str(1 * Gi))
     volume_2.attach(hostId=host_id)
     volume_2 = wait_for_volume_healthy(client, volume_name_2)
     write_volume_random_data(volume_2)
