--- a/integration/test_migration.html
+++ b/integration/test_migration.html
@@ -432,10 +432,9 @@ def test_migration_with_restore_volume(core_api, # NOQA
     &#34;&#34;&#34;
     # Step 1
     lht_host_id = get_self_host_id()
-    volume = create_and_check_volume(client,
-                                     volume_name,
-                                     REPLICA_COUNT,
-                                     SIZE)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=REPLICA_COUNT,
+                                     size=SIZE)
 
     attachment_id = common.generate_attachment_ticket_id()
     volume.attach(attachmentID=attachment_id, hostId=lht_host_id)
@@ -1059,10 +1058,9 @@ def test_migration_with_restore_volume(core_api, # NOQA
     &#34;&#34;&#34;
     # Step 1
     lht_host_id = get_self_host_id()
-    volume = create_and_check_volume(client,
-                                     volume_name,
-                                     REPLICA_COUNT,
-                                     SIZE)
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=REPLICA_COUNT,
+                                     size=SIZE)
 
     attachment_id = common.generate_attachment_ticket_id()
     volume.attach(attachmentID=attachment_id, hostId=lht_host_id)
