--- a/integration/test_settings.html
+++ b/integration/test_settings.html
@@ -676,9 +676,10 @@ def test_setting_backing_image_auto_cleanup(client, core_api, volume_name):  # N
     ]
 
     for volume_name in volume_names:
-        create_and_check_volume(
-            client, volume_name, 3, str(BACKING_IMAGE_EXT4_SIZE),
-            BACKING_IMAGE_NAME)
+        create_and_check_volume(client, volume_name,
+                                num_of_replicas=3,
+                                size=str(BACKING_IMAGE_EXT4_SIZE),
+                                backing_image=BACKING_IMAGE_NAME)
 
     # Step 4
     lht_host_id = get_self_host_id()
@@ -1852,9 +1853,10 @@ def test_setting_backing_image_auto_cleanup(client, core_api, volume_name):  # N
     ]
 
     for volume_name in volume_names:
-        create_and_check_volume(
-            client, volume_name, 3, str(BACKING_IMAGE_EXT4_SIZE),
-            BACKING_IMAGE_NAME)
+        create_and_check_volume(client, volume_name,
+                                num_of_replicas=3,
+                                size=str(BACKING_IMAGE_EXT4_SIZE),
+                                backing_image=BACKING_IMAGE_NAME)
 
     # Step 4
     lht_host_id = get_self_host_id()
