--- a/integration/test_snapshot.html
+++ b/integration/test_snapshot.html
@@ -349,7 +349,9 @@ def detect_and_repair_corrupted_replica(client, volume_name, data_integrity_mode
     &#34;&#34;&#34;
 
     # Step 1
-    volume = create_and_check_volume(client, volume_name, 3, size=str(2 * Gi))
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
+                                     size=str(2 * Gi))
 
     lht_hostId = get_self_host_id()
     volume = volume.attach(hostId=lht_hostId)
@@ -600,7 +602,8 @@ def check_hashed_and_with_immediate_hash(client, volume_name, snapshot_data_inte
     &#34;&#34;&#34;
 
     # Step 1
-    volume = create_and_check_volume(client, volume_name, 3,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
                                      size=str(volume_size * Mi),
                                      snapshot_data_integrity=snapshot_data_integrity) # NOQA
 
@@ -632,7 +635,8 @@ def check_hashed_and_without_immediate_hash(client, volume_name, snapshot_data_i
     &#34;&#34;&#34;
 
     # Step 1
-    volume = create_and_check_volume(client, volume_name, 3,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
                                      size=str(16 * Mi),
                                      snapshot_data_integrity=snapshot_data_integrity) # NOQA
 
@@ -672,7 +676,8 @@ def check_per_volume_hash_disable(client, volume_name, snapshot_data_integrity):
     &#34;&#34;&#34;
 
     # Step 1
-    volume = create_and_check_volume(client, volume_name, 3,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
                                      size=str(16 * Mi),
                                      snapshot_data_integrity=snapshot_data_integrity)  # NOQA
 
@@ -722,7 +727,9 @@ def test_snapshot_cr(client, volume_name, settings_reset):  # NOQA
     client.update(setting, value=&#34;true&#34;)
 
     lht_hostId = get_self_host_id()
-    volume = create_and_check_volume(client, volume_name, 3, size=str(1 * Gi))
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
+                                     size=str(1 * Gi))
     volume = volume.attach(hostId=lht_hostId)
     wait_for_volume_healthy(client, volume_name)
     volume = client.by_id_volume(volume_name)
@@ -781,7 +788,8 @@ with the values from the api</li>
     &#34;&#34;&#34;
 
     # Step 1
-    volume = create_and_check_volume(client, volume_name, 3,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
                                      size=str(volume_size * Mi),
                                      snapshot_data_integrity=snapshot_data_integrity) # NOQA
 
@@ -830,7 +838,8 @@ mechanism</li>
     &#34;&#34;&#34;
 
     # Step 1
-    volume = create_and_check_volume(client, volume_name, 3,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
                                      size=str(16 * Mi),
                                      snapshot_data_integrity=snapshot_data_integrity) # NOQA
 
@@ -889,7 +898,8 @@ the snapshot disk files are matched with the values from the api</li>
     &#34;&#34;&#34;
 
     # Step 1
-    volume = create_and_check_volume(client, volume_name, 3,
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
                                      size=str(16 * Mi),
                                      snapshot_data_integrity=snapshot_data_integrity)  # NOQA
 
@@ -1078,7 +1088,9 @@ with the values from the api</li>
     &#34;&#34;&#34;
 
     # Step 1
-    volume = create_and_check_volume(client, volume_name, 3, size=str(2 * Gi))
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
+                                     size=str(2 * Gi))
 
     lht_hostId = get_self_host_id()
     volume = volume.attach(hostId=lht_hostId)
@@ -1334,7 +1346,9 @@ with the values from the api</li>
     client.update(setting, value=&#34;true&#34;)
 
     lht_hostId = get_self_host_id()
-    volume = create_and_check_volume(client, volume_name, 3, size=str(1 * Gi))
+    volume = create_and_check_volume(client, volume_name,
+                                     num_of_replicas=3,
+                                     size=str(1 * Gi))
     volume = volume.attach(hostId=lht_hostId)
     wait_for_volume_healthy(client, volume_name)
     volume = client.by_id_volume(volume_name)
